<resources>
    <string name="app_name">Lost &amp; Found</string>
    <string name="content_disc">login page</string>
    <string name="nitc">nitclogo</string>
    <string name="signout">Sign Out</string>
    <string name="logout">Logout</string>
    <string name="pass_hint">Password...</string>

    <string name="email_hint">Your Email...</string>

    <string name="login_logo_desc">Logo Login Page</string>

    <string name="login_btn_text">Login to account</string>

    <string name="login_reg_btn_text">Need a new Account?</string>

    <string name="action_search_text">Search</string>

    <string name="action_setting_text">View Profile</string>

    <string name="action_logout_text">Logout</string>

    <string name="reg_btn_text">Create new Account</string>

    <string name="reg_login_text">Already have an Account?</string>

    <string name="reg_pass_text">Password...</string>

    <string name="reg_confirm_pass_text">Confirm Password...</string>

    <string name="setup_name_hint">Your Name...</string>

    <string name="setup_save_btn">Save Account Settings</string>

    <string name="setup_name_hint_text">Your Name ...</string>

    <string name="setup_btn_name_text">Save Account Settings</string>

    <string name="post_desc_hint">Add Description ...</string>

    <string name="new_post_btn_hint">Post</string>

    <string name="bottom_home_text">Home</string>

    <string name="bottom_notification_text">Notification</string>

    <string name="bottom_ac_text">Account</string>
    <string-array name="type_list">
        <item>Category</item>
        <item>Lost Item</item>
        <item>Found Item</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_title">Title</string>
    <string name="image_discripltion">Image</string>
    <string name="mail">User Email.....</string>
    <string name="bottom_account">Account</string>
    <string name="mainlogo">main logo</string>
    <string name="postDetails">Post Description</string>
    <string name="comment">comment icon</string>
    <string name="postImage">Post Image</string>
    <string name="username">Username</string>
    <string name="blog_post_date">Blog Post Date</string>
    <string name="_0_comments">0 Comments</string>
    <string name="email">user email</string>
    <string name="delete">Delete</string>
    <string name="Edit">Edit Post</string>
</resources>
